--- a/A5/index.html
+++ b/A5/index.html
@@ -10,7 +10,11 @@
   <body>
     <header>
       <h1>Word Analytics App</h1>
-      <!-- <a href="#" target="_blank">Click Here to See the Source Code</a> -->
+      <a
+        href="https://github.com/adnan059/JavaScript-101/blob/main/A5/main.js"
+        target="_blank"
+        >Click Here to See the Source Code</a
+      >
     </header>
 
     <section class="container">
